--- a/app/public/assets/img/icon/favicon/manifest.json
+++ b/app/public/assets/img/icon/favicon/manifest.json
@@ -7,6 +7,7 @@
 	"orientation":		"any",
 	"background_color":	"#fff",
 	"theme_color":		"#fff",
+	"orientation":		"any",
 	"icons": [
 		{
 			"src": "/android-chrome-36x36.png",
