--- a/app/public/assets/prepros.config
+++ b/app/public/assets/prepros.config
@@ -916,6 +916,13 @@
     },
     "files": [
       {
+        "file": "js/_main/main.js",
+        "config": {
+          "autoCompile": true,
+          "sourceMap": true
+        }
+      },
+      {
         "file": "scss/_main.scss",
         "config": {
           "tasks": {
