--- a/app/.env.example
+++ b/app/.env.example
@@ -1,8 +1,8 @@
-APP_NAME=natsuko
-APP_ENV=local
+APP_NAME=Roughlang
+APP_ENV=prod
 APP_KEY=base64:qw1eR3kxxbBFFRbu6e7jD8yLi597i2roy2BKNIuPBXs=
 APP_DEBUG=true
-APP_URL=http://localhost:8000
+APP_URL=http://localhost:6265
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
