--- a/app/docker/8.1/Dockerfile
+++ b/app/docker/8.1/Dockerfile
@@ -8,7 +8,7 @@ ARG NODE_VERSION=16
 WORKDIR /var/www/html
 
 ENV DEBIAN_FRONTEND noninteractive
-ENV TZ=UTC
+ENV TZ='Asia/Tokyo'
 
 RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
 
