--- a/app/.env.example
+++ b/app/.env.example
@@ -3,6 +3,12 @@ APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
+APP_GLOBAL_IP_ADDRESS=127.0.0.1
+#
+#
+#
+APP_ALLOW_GIP=172.26.0.1
+APP_SUPERUSERS=sample1@example.com,sample2@example.com
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -50,3 +56,10 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+SCOUT_DRIVER=meilisearch
+MEILISEARCH_HOST=http://meilisearch:7700
+
+WEBHOOK_TOKEN=xxxxxxxxxxxxxxxx
+
+APP_WPBLOG_URL=http://localhost:8000/ac/wp-json/wp/v2/posts
